# gazeqwen

./: .gitignore  MODEL_CARD.md  README.md  demo.py  pyproject.toml  requirements.txt
demo_data/: OP03-R01-PastaSalad_fixation_filtered.csv  sample_qa.json
gazeqwen/: __init__.py  config.py  data.py  eval.py  eval_proactive.py  hooks.py  lora.py  model.py  split.py  train.py  vjepa_features.py
scripts/: eval.sh  train.sh
splits/: gazelens_split.json
