[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gazeqwen"
version = "1.0.0"
description = "GazeQwen: Gaze-conditioned video understanding with Qwen2.5-VL"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.45.0",
    "qwen-vl-utils>=0.0.8",
    "timm>=1.0.0",
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["gazeqwen*"]
